Connect the backend to the simulator and amend resting orders
The backend kept its own market data machinery while the simulator became
the thing that actually prices and books. Point it at the simulator and
delete what that makes redundant.

The backend now reaches the simulator through the generated client, behind
a gateway and a contract mapper in com.example.fx.backend.simulator, and
receives resting order callbacks at /api/resting-orders/events. Its local
price generation, JMS subscriber, market data model, currency crossing, and
the FxPrice entity and repository go, along with the tests that covered
them. The rates endpoint moves from /api/fxprices to /api/rates, and the
startup scripts and the UI follow it.

The contract goes to 2.5.0 with an amend operation: PUT on a working order
atomically replaces its mutable terms while keeping its orderId, original
request context, and place in the callback flow, so a caller can reprice
without cancelling and re-placing.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>